--- a/Eldarya Tax Calculator/MainPage.xaml
+++ b/Eldarya Tax Calculator/MainPage.xaml
@@ -82,7 +82,7 @@
 
 			<!-- Canadian Dollars -->
 			<Image Grid.Column="5" Grid.Row="5" Margin="10" Source="Images/flag_ca.png" Stretch="None" />
-			<TextBox x:Name="DeviseCAD" Grid.Column="6" Margin="10" Grid.Row="5" PlaceholderText="Dollars" InputScope="CurrencyAmount" x:Uid="InputCAD" />
+			<TextBox x:Name="DeviseCAD" Grid.Column="6" Margin="10" Grid.Row="5" PlaceholderText="Canadian Dollars" InputScope="CurrencyAmount" x:Uid="InputCAD" />
 			<TextBlock Grid.Column="7" Margin="10" Grid.Row="5" Text="$" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold" FontFamily="Rubik" Foreground="#FF34386F" FontSize="18" />
 
 			<!-- Euros -->
