--- a/Eldarya Tax Calculator/MainPage.xaml
+++ b/Eldarya Tax Calculator/MainPage.xaml
@@ -45,7 +45,7 @@
 				<ColumnDefinition Width="Auto" />
 				<ColumnDefinition Width="3*" MinWidth="150" />
 				<ColumnDefinition Width="Auto" />
-				<ColumnDefinition MaxWidth="52" />
+				<ColumnDefinition  />
 				<ColumnDefinition Width="Auto" />
 				<ColumnDefinition Width="3*" MinWidth="150" />
 				<ColumnDefinition Width="Auto" />
